--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="icon" href="favicon.ico">
     </head>
-    <body>
+    <body> 
+        <div>
+            <h1>I'm Ishaan. </h1>
+            <p>a programmer.</p>
+        </div>
     </body>
 </html>
