--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
         <link rel="icon" href="favicon.ico">
     </head>
     <body> 
-        <div>
-            <h1>I'm Ishaan. </h1>
+        <div class="top-container">
+            <h1>I'm Ishaan.</h1>
             <p>a programmer.</p>
+        </div>
+        <div class="middle-container">
+        </div>
+        <div class="bottom-container">
         </div>
     </body>
 </html>
