--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     </head>
     <body> 
         <div class="top-container">
+            <img src="images/cloud.png" alt="cloud-img">
             <h1>I'm Ishaan.</h1>
             <p>a programmer.</p>
+            <img src="images/mountain.png" alt="mountain-img">
         </div>
         <div class="middle-container">
         </div>
