--- a/index.html
+++ b/index.html
@@ -16,8 +16,39 @@
             <img src="images/mountain.png" alt="mountain-img">
         </div>
         <div class="middle-container">
+            <div class="profile">
+                <img src="images/bitmoji.png" alt="profile-img">
+                <h2>Hello.</h2>
+                <p>I am a hardworking and ever always enthusiastic person who loves getting newer and unexplored opportunities to work and widen my reach.</p>
+            </div>
+            <hr>
+            <div class="skills">
+                <h2>My Skills.</h2>
+                <div class="skill-row">
+                <img class="" src="images/code.png" alt="computer-img">
+                <h3>C++</h3>
+                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                </div>
+                <div class="skill-row">
+                <img class="" src="images/php.png" alt="chillies-img">
+                <h3>Php</h3>
+                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                </div>
+            </div>
+            <hr>
+            <div class="contact-me">
+                <h2>Get In Touch</h2>
+                <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+                <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+                <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+            </div>
         </div>
+        
         <div class="bottom-container">
-        </div>
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        <p>© 2020 Ishaan Sharma.</p>
+        </div>          
     </body>
 </html>
