--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <div class="skills">
                 <h2>My Skills.</h2>
                 <div class="skill-row">
-                <img class="" src="images/code.png" alt="computer-img">
-                <h3>C++</h3>
-                <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+                    <img class="code-img" src="images/code.png" alt="code-img">
+                    <h3>C++</h3>
+                    <p class="code-skill-desc">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
                 </div>
                 <div class="skill-row">
-                <img class="" src="images/php.png" alt="chillies-img">
-                <h3>Php</h3>
-                <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+                    <img class="php-img" src="images/php.png" alt="php-img">
+                    <h3>Php</h3>
+                    <p class="php-skill-desc">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
                 </div>
             </div>
             <hr>
