--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="profile">
                 <img src="images/bitmoji.png" alt="profile-img">
                 <h2>Hello.</h2>
-                <p>I am a hardworking and ever always enthusiastic person who loves getting newer and unexplored opportunities to work and widen my reach.</p>
+                <p class="intro">I am a hardworking and ever always enthusiastic person who loves getting newer and unexplored opportunities to work and widen my reach.</p>
             </div>
             <hr>
             <div class="skills">
@@ -39,7 +39,7 @@
             <div class="contact-me">
                 <h2>Get In Touch</h2>
                 <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-                <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+                <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
                 <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
             </div>
         </div>
@@ -48,7 +48,7 @@
         <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-        <p>© 2020 Ishaan Sharma.</p>
+        <p class="copyright">© 2020 Ishaan Sharma.</p>
         </div>          
     </body>
 </html>
